Complement LoggingAspect by SonarQube